Fix grid spacing on transaction form.

--- a/angular/src/app/transaction-form/transaction-form.component.css
+++ b/angular/src/app/transaction-form/transaction-form.component.css
@@ -1,7 +1,7 @@
 form {
     display: grid;
-    grid-template-columns: 50% 50%;
-    gap: 3em;
+    grid-template-columns: 48% 48%;
+    gap: 2em 4%;
 }
 
 .double-wide {
